[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/menu/SelectLevelMenu.gd" type="Script" id=1]
[ext_resource path="res://bg/ParallaxBackgroundMenu.gd" type="Script" id=2]
[ext_resource path="res://bg/ParallaxBackground.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://theme/m6x11.ttf"

[sub_resource type="DynamicFont" id=2]
size = 54
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = SubResource( 1 )

[node name="SelectLevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -150.0
margin_bottom = 150.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Select Level"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 89.0
margin_right = 800.0
margin_bottom = 139.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 175.0
margin_right = 625.0
margin_bottom = 50.0
custom_constants/vseparation = 20
custom_constants/hseparation = 50
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
disabled = true
text = "1"

[node name="2" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
margin_left = 100.0
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
disabled = true
text = "2"

[node name="3" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
margin_left = 200.0
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
disabled = true
text = "3"

[node name="4" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
margin_left = 300.0
margin_right = 350.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
disabled = true
text = "4"

[node name="5" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
margin_left = 400.0
margin_right = 450.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
disabled = true
text = "5"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 350.0
margin_right = 800.0
margin_bottom = 390.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="HBoxContainer"]
margin_left = 300.0
margin_right = 500.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "Main Menu"
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonContainer/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonContainer/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="HBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
